fix(app): change response time color, make dark mode default

--- a/app/app.global.less
+++ b/app/app.global.less
@@ -13,7 +13,6 @@
 }
 
 
-
 .response-edit {
 
 .ace_gutter > .ace_layer {
@@ -28,22 +27,6 @@
   z-index: 30;
   width: 39%;
   right: 0px;
-}
-
-// .ant-drawer-header {
-//   background: #001529;
-//   border-radius: 0px;
-
-// .ant-drawer-title {
-//   color: #fff;
-//   font-weight: 700;
-// }
-
-
-.ant-tabs-nav .ant-tabs-tab {
-  padding: 4px;
-  padding-left: 17px;
-  user-select: none;
 }
 
 .ant-tabs-bar {
